JNI: create jaw_object_peek_parent

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=750703